--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,7 +39,7 @@ jobs:
         run: go mod download
 
       - name: Run tests
-        run: go test -v -count=1 _-coverprofile=coverage.txt --race --timeout=30s ./...
+        run: go test -v -count=1 --coverprofile=coverage.txt --race --timeout=30s ./...
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
